<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="discover">Discover</string>
    <string name="favorite">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">sort</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_now_playing">Now plaing</string>
    <string name="search">Search</string>
    <string name="movie_backdrop_content_description">Content</string>
    <string name="language">Language</string>
    <string name="release_date">Release date</string>
    <string name="label_overview">Overview</string>
    <string name="cast">The Cast</string>
    <string name="trailers">trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="language2">Language : </string>

    <string name="review_author_image">Review author image</string>
    <string name="play_icon">play</string>
    <string name="trailer_thumbnail">TrailerThumbnail</string>
    <string name="share">share</string>
</resources>